--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
+    "postinstall": "npm rebuild sqlite3",
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
